log
Fri 09 Sep 2022 04:41:42 PM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  0|0
daeee85
Fri 09 Sep 2022 04:48:11 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
df89a49
Fri 09 Sep 2022 04:48:37 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:17: error: expected expression before ‘]’ token
   56 |   mapa->buckets[] = NULL;
      |                 ^
Compilation failed
fb12468
Fri 09 Sep 2022 04:48:48 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:17: error: expected expression before ‘]’ token
   56 |   mapa->buckets[][] = NULL;
      |                 ^
Compilation failed
5796dc9
